# OrbiBot

./: .claudeignore  .cursorignore  .gitignore  CLAUDE.md  CLAUDE.md.backup  OPERATION_GUIDE.md  README.md  REALSENSE_SETUP.md  frames_2025-07-15_20.48.53.gv  orbibot.md
src/orbibot_bringup/: package.xml  setup.cfg  setup.py
src/orbibot_bringup/launch/: autonomous_navigation.launch.py  orbibot_basic.launch.py  orbibot_system.launch.py
src/orbibot_control/: package.xml  setup.cfg  setup.py
src/orbibot_control/config/: control_params.yaml  mecanum_params.yaml
src/orbibot_control/launch/: control.launch.py  orbibot_system.launch.py
src/orbibot_control/orbibot_control/: control_manager.py  kinematics_test.py  mecanum_controller.py  mecanum_kinematics.py  pid_controller.py  system_test.py  velocity_smoother.py
src/orbibot_description/: CMakeLists.txt  package.xml
src/orbibot_description/launch/: description.launch.py  display.launch.py  orbibot_remote_gui.launch.py  robot_only.launch.py  robot_state.launch.py
src/orbibot_description/meshes/: 520Motor_Bracket.STEP  motor.stl
src/orbibot_description/rviz/: orbibot.rviz
src/orbibot_description/urdf/: orbibot.urdf.xacro
src/orbibot_hardware/: package.xml  setup.cfg  setup.py
src/orbibot_hardware/config/: hardware_params.yaml
src/orbibot_hardware/launch/: hardware.launch.py
src/orbibot_hardware/orbibot_hardware/: Rosmaster_Lib.py  api_debug.py  check_permission.py  hardware_monitor.py  hardware_node.py  hardware_test.py  motor_enable_client.py  motor_test.py  rosmaster_debug.py  rosmaster_interface.py
src/orbibot_hardware/scripts/: setup_permissions.sh
src/orbibot_localization/: package.xml  setup.cfg  setup.py
src/orbibot_localization/config/: localization_params.yaml
src/orbibot_localization/launch/: localization.launch.py
src/orbibot_localization/orbibot_localization/: ekf_localization.py  sensor_fusion.py
src/orbibot_msgs/: CMakeLists.txt  package.xml
src/orbibot_msgs/msg/: MotorFeedback.msg  SafetyStatus.msg  SystemStatus.msg  WheelSpeeds.msg
src/orbibot_msgs/srv/: CalibrateIMU.srv  CalibrateIMY.srv  ResetOdometry.srv  SetMotorEnable.srv
src/orbibot_navigation/: CMakeLists.txt  README.md  README_REALSENSE.md  package.xml
src/orbibot_navigation/config/: enhanced_nav2_params.yaml  nav2_params.yaml  orbibot_nav2_params.yaml  orbibot_slam_params.yaml  realsense_params.yaml  slam.rviz  slam_params.yaml
src/orbibot_navigation/launch/: autonomous_navigation.launch.py  basic_navigation.launch.py  hardware.launch.py  lidar.launch.py  navigation.launch.py  orbibot_navigation.launch.py  orbibot_system_nav.launch.py  realsense_navigation.launch.py  realsense_reliable.launch.py  rviz.launch.py  sensors.launch.py  slam.launch.py  test.launch.py
src/orbibot_navigation/orbibot_navigation/: autonomous_navigation.py
src/orbibot_sensors/: package.xml  setup.cfg  setup.py
src/orbibot_sensors/config/: realsense_camera_params.yaml  rplidar_params.yaml
src/orbibot_sensors/launch/: camera.launch.py  lidar.launch.py  sensors.launch.py
src/orbibot_simulation/: README.md  package.xml  setup.cfg  setup.py
src/orbibot_simulation/config/: gz_bridge.yaml
src/orbibot_simulation/launch/: gazebo.launch.py  simulation.launch.py
src/orbibot_simulation/orbibot_simulation/: simulation_control_node.py  simulation_hardware_node.py
src/orbibot_simulation/worlds/: empty.sdf
src/orbibot_slam/: package.xml  setup.cfg  setup.py
src/orbibot_slam/launch/: slam.launch.py
src/orbibot_slam/rviz/: slam.rviz
src/orbibot_teleop/: package.xml  setup.cfg  setup.py
src/orbibot_teleop/launch/: controller.launch.py  keyboard.launch.py  keyboard_teleop.launch.py  orbibot_bringup.launch.py  ps_controller_teleop.launch.py  simple_controller_teleop.launch.py  teleop.launch.py
src/orbibot_teleop/orbibot_teleop/: direction_speed_teleop.py  emergency_stop_node.py  keyboard_teleop.py  ps_controller_teleop.py  simple_controller_teleop.py  simple_teleop.py
src/orbibot_webui/: package.xml  setup.cfg  setup.py
src/orbibot_webui/launch/: webui.launch.py
src/orbibot_webui/orbibot_webui/: web_monitor.py
src/orbibot_webui/orbibot_webui/templates/: dashboard.html
