<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbibot_navigation</name>
  <version>1.0.0</version>
  <description>Navigation package for OrbiBot with SLAM and autonomous navigation</description>
  <maintainer email="jewel.nath@orbitax.com">Jewel Nath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>orbibot_msgs</depend>
  <depend>orbibot_slam</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- Nav2 Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
