<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbibot_slam</name>
  <version>1.0.0</version>
  <description>SLAM package for OrbiBot using slam_toolbox</description>
  <maintainer email="jewel.nath@orbitax.com">Jewel Nath</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_common</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
